# mimir

./: .gitignore  id_rsa_git.pub  mimir-14388.out  mimir-14454.out  mimir-14455.out  mimir-14456.out  mimir-14457.out  mimir-14458.out  mimir-14459.out  mimir-14460.out  mimir-14461.out  mimir-14462.out  mimir-14463.out  mimir-14464.out  mimir-14465.out  mimir-14468.out  mimir-14469.out  pyproject.toml  requirements.txt  slurm.sh
configs/: mi.json  ne.json
mimir/: config.py  custom_datasets.py  data_utils.py  models.py
mimir/attacks/: neighborhood.py
