[tool.poetry]
name = "mimir"
version = "0.1.0"
description = ""
authors = ["Preslav <preslav.aleksandrov@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
transformers = "^4.46.2"
datasets = "^3.1.0"
matplotlib = "^3.9.2"
tqdm = "^4.67.0"
scikit-learn = "^1.5.2"
openai = "^1.54.4"
packaging = "^24.2"
ninja = "^1.11.1.1"
pytorch-lightning = "^2.4.0"
zstandard = "^0.23.0"
simple-parsing = "^0.1.6"
nltk = "^3.9.1"
scipy = ">=1.11.2"
pytest = "^8.3.3"
huggingface-hub = "^0.26.2"
accelerate = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
